[gd_scene load_steps=43 format=3 uid="uid://cm764g3mv0an6"]

[ext_resource type="Script" path="res://Table.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://8vqlujf8c7g0" path="res://graphics/table.png" id="2"]
[ext_resource type="PackedScene" uid="uid://ddp3appjhnx6l" path="res://Bumper.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://do736fjfpe65w" path="res://Light.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://hwtd4rfice1a" path="res://graphics/bumper-light.png" id="5"]
[ext_resource type="PackedScene" uid="uid://om7ojq7jkkdd" path="res://Flipper.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dndueiq2j018c" path="res://Plunger.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://x6qsyd6uqysf" path="res://DropTarget.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://bwiw6eo3vofpc" path="res://Kicker.tscn" id="9"]
[ext_resource type="Texture2D" uid="uid://bfj44w04om0od" path="res://graphics/dmd-moire.png" id="10"]
[ext_resource type="Script" path="res://DMD.gd" id="11"]
[ext_resource type="Texture2D" uid="uid://b0xfid5hm400o" path="res://graphics/save-light.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bncyeh4413yhn" path="res://graphics/special-multiplier-light.png" id="13"]
[ext_resource type="Texture2D" uid="uid://cv3u62bgdfkjk" path="res://graphics/special-lane-hunt-light.png" id="14"]
[ext_resource type="Texture2D" uid="uid://cvbigp1x555dk" path="res://graphics/special-target-hunt-light.png" id="15"]
[ext_resource type="PackedScene" uid="uid://wmd47010dyhh" path="res://Gate.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://bdl6at5qouqhf" path="res://Rollover.tscn" id="17"]
[ext_resource type="Texture2D" uid="uid://bbdjdmd68nc4d" path="res://graphics/lane-light.png" id="18"]
[ext_resource type="Texture2D" uid="uid://buncjyj5gp52o" path="res://graphics/victory-lane-hunt-light.png" id="19"]
[ext_resource type="Texture2D" uid="uid://cfgm1jc4b56kj" path="res://graphics/victory-target-hunt-light.png" id="20"]
[ext_resource type="Texture2D" uid="uid://bx7qbhyqv37xl" path="res://graphics/victory-multiball-light.png" id="21"]
[ext_resource type="Texture2D" uid="uid://beri25g0yobp3" path="res://graphics/victory-bumpers-light.png" id="22"]
[ext_resource type="Texture2D" uid="uid://c2lkicpihtobn" path="res://graphics/target-light.png" id="23"]
[ext_resource type="Texture2D" uid="uid://crxk7dy1svpqu" path="res://graphics/x2-light.png" id="24"]
[ext_resource type="Texture2D" uid="uid://cinljlvgo8anh" path="res://graphics/x4-light.png" id="25"]
[ext_resource type="Texture2D" uid="uid://bpx4mhbtktpih" path="res://graphics/x8-light.png" id="26"]
[ext_resource type="Script" path="res://AudioStreamPlayer.gd" id="27"]
[ext_resource type="Texture2D" uid="uid://kllcq85yvpse" path="res://graphics/kicker-light.png" id="28"]
[ext_resource type="Script" path="res://Toy.gd" id="29"]
[ext_resource type="Texture2D" uid="uid://cri5sfg421li0" path="res://graphics/toy-gate.png" id="30"]
[ext_resource type="Texture2D" uid="uid://b35crkjbnv051" path="res://graphics/toy.png" id="31"]
[ext_resource type="PackedScene" uid="uid://dnmuitwat0o3b" path="res://Rubberband.tscn" id="32"]
[ext_resource type="Texture2D" uid="uid://5pwq6v1jcoor" path="res://graphics/toy-light.png" id="33"]
[ext_resource type="AudioStream" uid="uid://505i0mmdl1k" path="res://sound/toy.wav" id="34"]
[ext_resource type="Texture2D" uid="uid://kniv8p5dohh1" path="res://graphics/instructions.png" id="35"]
[ext_resource type="Script" path="res://Instructions.gd" id="36"]
[ext_resource type="PackedScene" uid="uid://jx058mso3aui" path="res://Needle.tscn" id="37"]
[ext_resource type="Texture2D" uid="uid://bdfic8kd1oimg" path="res://graphics/skill-light.png" id="38"]
[ext_resource type="Texture2D" uid="uid://bvoasl8pxm0lo" path="res://graphics/loop-light.png" id="39"]
[ext_resource type="Texture2D" uid="uid://d25up1nk753ls" path="res://graphics/window-light.png" id="40"]

[sub_resource type="PhysicsMaterial" id="1"]
bounce = 0.28

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kdte6"]
a = Vector2(-150, 0)
b = Vector2(150, 0)

[node name="Table" type="Node"]
process_mode = 3
script = ExtResource("1")

[node name="Walls" type="RigidBody2D" parent="."]
collision_layer = 4
collision_mask = 2
physics_material_override = SubResource("1")
gravity_scale = 0.0
freeze = true

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(0, -1)
polygon = PackedVector2Array(380.06, 400.167, 336.367, 408.905, 286.382, 426.105, 236.626, 453.701, 196.904, 487.569, 165.127, 529.799, 142.967, 584.155, 138.367, 622.622, 138.367, 665.688, 200.249, 1012.73, 196.904, 1022.76, 189.378, 1032.8, 178.089, 1034.05, 171.817, 1029.45, 80.2485, 725.061, 79.4122, 681.995, 81.5029, 657.326, 87.3565, 633.493, 94.0465, 607.151, 110.205, 571.557, 134.646, 527.561, 161.882, 489.851, 201.687, 452.141, 243.587, 422.112, 292.471, 399.067, 345.807, 383.156, 406.677, 375.848, 463.781, 378.39, 518.2, 386.731, 563.427, 395.575, 606.025, 410.939, 639.545, 425.604, 663.289, 442.364, 688.946, 466.932, 701.78, 494.139, 708.375, 522.607, 710.883, 557.311, 705.03, 598.287, 698.097, 638.959, 681.516, 688.702, 629.166, 814.671, 557.318, 781.898, 568.41, 767.53, 585.007, 779.517, 690.738, 615.389, 672.791, 604.996, 675.985, 597.255, 678.751, 578.506, 673.526, 561.909, 658.773, 537.935, 627.143, 512.443, 576.18, 489.742, 515.511, 476.035, 509.95, 436.313, 489.295, 411.686, 457.846, 400.447, 420.974, 398.578)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(319.037, 475.981, 358.188, 463.081, 394.207, 456.559, 427.208, 453.324, 436.914, 457.853, 439.825, 464, 437.237, 471.118, 430.169, 477.056, 412.673, 481.043, 373.528, 486.736, 334.452, 497.49, 299.512, 514.572, 265.384, 544.509, 250, 572, 257.718, 595.788, 242.624, 606.91, 346.297, 776.124, 363.775, 766.194, 372.991, 779.857, 408.915, 800.214, 522.024, 831.949, 570.553, 850.856, 608.998, 871.654, 568.032, 976.906, 507.528, 862.201, 358.159, 856.528, 300.176, 977.536, 220.765, 655.479, 218, 603, 226.906, 567.396, 244, 533, 276.377, 500)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(13.4211, 23.9103)
polygon = PackedVector2Array(247.856, 1989.13, 247.258, 1852.62, 19.9753, 1669.52, 17.9857, 1327.66, 90.5789, 1107.09, 17.7013, 785.72, 2.57887, 685.09, 0.242749, 630.688, 5.82948, 590.882, 16.5789, 544.09, 46.8822, 485.049, 81.4201, 439.102, 147.762, 372.76, 149.857, 346.922, 157.539, 317.591, 177.791, 291.054, 202.931, 267.311, 237.848, 248.456, 282.542, 230.997, 326.537, 218.427, 369.834, 212.142, 411.036, 207.254, 459.221, 205.857, 506.708, 208.65, 552.799, 212.841, 603.778, 222.617, 663.136, 242.171, 712.718, 263.819, 761.602, 295.244, 804.899, 341.335, 831.436, 391.615, 849.541, 446.283, 845.659, 1992.33, 882.995, 1992.99, 881.851, 202.339, -12.718, 202.339, -12.8758, 1991.94)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(46.895, 0)
rotation = 0.00309275
polygon = PackedVector2Array(692.077, 363.904, 716.091, 384.628, 738.241, 414.182, 754.664, 450.206, 767.018, 503.287, 768.846, 2014.02, 508.904, 2014.25, 508.781, 1876.58, 741.127, 1693.84, 739.072, 1361.55, 696.87, 1169.17, 759.031, 933.229, 700.575, 912.357, 625.842, 1092.24, 603.339, 1083.8, 718.443, 640.972, 724.854, 614.724, 731.889, 575.739, 732.171, 540.422, 728.091, 505.479, 716.868, 472.942, 705.499, 449.82, 691.641, 426.931, 671.407, 405.565)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(0, 1)
polygon = PackedVector2Array(101.876, 1545.93, 104.775, 1536.71, 110.566, 1527.67, 121.369, 1524.17, 135.871, 1527.49, 149.035, 1544.49, 122.627, 1555.49, 196.095, 1724.55, 221.216, 1720.1, 224.297, 1732.42, 223.417, 1741.66, 213.294, 1748.7, 196.569, 1748.7, 180.284, 1740.34, 102.822, 1682.25)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(667.067, 1536.24, 675.869, 1527.88, 688.47, 1525.32, 700.076, 1529.2, 705.862, 1537.45, 708.234, 1546.14, 708.879, 1684.57, 622.174, 1747.06, 609.85, 1750.59, 596.206, 1749.7, 588.284, 1741.78, 585.643, 1728.14, 592.685, 1714.05, 614.691, 1728.58, 692.154, 1549.89)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(229.857, 358.48, 244.353, 340.202, 258.219, 328.858, 282.169, 318.143, 325.026, 304.278, 359.06, 297.975, 387.691, 293.034, 423.793, 289.872, 465.429, 288.291, 509.06, 289.782, 501.497, 318.774, 483.22, 317.513, 440.993, 315.622, 401.287, 316.883, 362.211, 320.664, 322.505, 327.597, 286.58, 337.051, 258.219, 347.135)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(579.862, 297.451, 571.768, 329.828, 592.453, 336.123, 603.02, 302.398)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(656.756, 318.586, 680.814, 328.704, 665.525, 368.05, 643.041, 357.033)

[node name="Sprite2D" type="Sprite2D" parent="Walls"]
position = Vector2(448, 1120)
texture = ExtResource("2")

[node name="Bumper1" parent="." instance=ExtResource("3")]
position = Vector2(388.797, 588.562)

[node name="Light3D" parent="Bumper1" instance=ExtResource("4")]
position = Vector2(-0.337982, -0.470032)
texture = ExtResource("5")

[node name="Bumper2" parent="." instance=ExtResource("3")]
position = Vector2(467.409, 718.163)

[node name="Light3D" parent="Bumper2" instance=ExtResource("4")]
position = Vector2(-0.177002, -0.477051)
texture = ExtResource("5")

[node name="Bumper3" parent="." instance=ExtResource("3")]
position = Vector2(544.812, 589.685)

[node name="Light3D" parent="Bumper3" instance=ExtResource("4")]
position = Vector2(-0.346008, -0.83197)
texture = ExtResource("5")

[node name="LFlipper" parent="." instance=ExtResource("6")]
z_index = 1
position = Vector2(229.5, 1884)
rotation = 0.523599
keycode = "ui_left_flip"
snap_time = 0.05
snap_angle = -47

[node name="RFlipper" parent="." instance=ExtResource("6")]
z_index = 1
position = Vector2(583.5, 1884)
rotation = 2.61799
keycode = "ui_right_flip"
snap_time = 0.05
snap_angle = 47

[node name="Exit" type="Area2D" parent="."]
position = Vector2(401.177, 2012.74)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(3.823, 0.26001)
shape = SubResource("SegmentShape2D_kdte6")

[node name="Plunger" parent="." instance=ExtResource("7")]
position = Vector2(834.25, 1872.17)
full_extension = 60
pull_time = 0.75
release_time = 0.03

[node name="DropTarget1" parent="." instance=ExtResource("8")]
position = Vector2(57.3714, 1322.9)
rotation = -1.28063

[node name="DropTarget2" parent="." instance=ExtResource("8")]
position = Vector2(73.0117, 1270.1)
rotation = -1.28364

[node name="DropTarget3" parent="." instance=ExtResource("8")]
position = Vector2(88.6209, 1217.37)
rotation = -1.29007

[node name="DropTarget4" parent="." instance=ExtResource("8")]
position = Vector2(731.705, 1225.22)
rotation = 1.31065

[node name="DropTarget5" parent="." instance=ExtResource("8")]
position = Vector2(745.044, 1279.27)
rotation = 1.29554

[node name="DropTarget6" parent="." instance=ExtResource("8")]
position = Vector2(759.37, 1333.49)
rotation = 1.32235

[node name="LKicker" parent="." instance=ExtResource("9")]
position = Vector2(171.288, 1638.13)
rotation = -0.393051

[node name="RKicker" parent="." instance=ExtResource("9")]
position = Vector2(641.476, 1633.01)
rotation = -2.754

[node name="DMDMoire" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(3.05176e-05, 7.62939e-06)
texture = ExtResource("10")
offset = Vector2(448, 112)
region_enabled = true
region_rect = Rect2(-448, -112, 896, 224)

[node name="DMD" type="Node2D" parent="."]
process_mode = 1
z_index = 5
position = Vector2(448, 112)
scale = Vector2(7, 7)
script = ExtResource("11")

[node name="DMDTimer" type="Timer" parent="DMD"]

[node name="SaveLight" parent="." instance=ExtResource("4")]
position = Vector2(406.144, 1789.85)
scale = Vector2(0.98, 0.95)
texture = ExtResource("12")

[node name="SpecialLight1" parent="." instance=ExtResource("4")]
position = Vector2(747.409, 1004.33)
rotation = 0.342578
scale = Vector2(0.668, 0.668)
texture = ExtResource("13")

[node name="SpecialLight2" parent="." instance=ExtResource("4")]
position = Vector2(732.977, 1046.61)
rotation = 0.329934
scale = Vector2(0.668, 0.668)
texture = ExtResource("14")

[node name="SpecialLight3" parent="." instance=ExtResource("4")]
position = Vector2(718.834, 1088.17)
rotation = 0.332302
scale = Vector2(0.66777, 0.66777)
texture = ExtResource("15")

[node name="EntryGate1" parent="." instance=ExtResource("16")]
position = Vector2(199.209, 375.969)
rotation = 2.61917

[node name="EntryGate2" parent="." instance=ExtResource("16")]
position = Vector2(537.891, 322.178)
rotation = 3.28975

[node name="EntryGate3" parent="." instance=ExtResource("16")]
position = Vector2(618.378, 345.196)
rotation = 3.53534

[node name="EntryGate4" parent="." instance=ExtResource("16")]
position = Vector2(692.202, 386.801)
rotation = 3.80092

[node name="Lane1Rollover" parent="." instance=ExtResource("17")]
position = Vector2(397.191, 345.404)
rotation = 1.47714

[node name="Lane2Rollover" parent="." instance=ExtResource("17")]
position = Vector2(364.847, 432.891)
rotation = 1.36104

[node name="Lane3Rollover" parent="." instance=ExtResource("17")]
position = Vector2(321.454, 357.922)
rotation = -1.90656

[node name="Lane4Rollover" parent="." instance=ExtResource("17")]
position = Vector2(66.5405, 1580.75)
rotation = 3.14159

[node name="Lane5Rollover" parent="." instance=ExtResource("17")]
position = Vector2(747.092, 1580.73)
rotation = 3.14159

[node name="BallCaptureRight" parent="." instance=ExtResource("17")]
position = Vector2(754.911, 979.498)
rotation = 0.334455

[node name="ResetLeftTargets" type="Timer" parent="."]
process_mode = 1
wait_time = 0.5
one_shot = true

[node name="ResetRightTargets" type="Timer" parent="."]
process_mode = 1
wait_time = 0.5
one_shot = true

[node name="BallReleaseRightTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = true

[node name="BallEjectTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="WizardModeTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 30.0
one_shot = true

[node name="BallSaveTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 15.0
one_shot = true

[node name="NudgeLeftTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = true

[node name="NudgeRightTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = true

[node name="NudgeUpTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = true

[node name="GameOverTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 3.0
one_shot = true

[node name="BallLostTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 9.0
one_shot = true

[node name="SkillShotTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 15.0
one_shot = true

[node name="WindowTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 10.0
autostart = true

[node name="WizardReadyTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 10.0

[node name="ZapTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.5
one_shot = true

[node name="CountdownTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="LaneLight1" parent="." instance=ExtResource("4")]
position = Vector2(117.935, 998.914)
rotation = 2.77732
texture = ExtResource("18")

[node name="LaneLight2" parent="." instance=ExtResource("4")]
position = Vector2(242.529, 947.947)
rotation = 2.95837
texture = ExtResource("18")

[node name="LaneLight3" parent="." instance=ExtResource("4")]
position = Vector2(681.193, 797.92)
rotation = -2.7529
texture = ExtResource("18")

[node name="LaneLight4" parent="." instance=ExtResource("4")]
position = Vector2(66.6574, 1615.9)
texture = ExtResource("18")

[node name="LaneLight5" parent="." instance=ExtResource("4")]
position = Vector2(747.272, 1615.87)
texture = ExtResource("18")

[node name="LaneHuntVictoryLight" parent="." instance=ExtResource("4")]
position = Vector2(337.008, 1376.51)
rotation = 0.193108
texture = ExtResource("19")

[node name="TargetHuntVictoryLight" parent="." instance=ExtResource("4")]
position = Vector2(213.858, 1403.01)
texture = ExtResource("20")

[node name="MultiballVictoryLight" parent="." instance=ExtResource("4")]
position = Vector2(462.856, 1375.73)
rotation = 0.393895
texture = ExtResource("21")

[node name="BumperVictoryLight" parent="." instance=ExtResource("4")]
position = Vector2(587.482, 1400.97)
rotation = 0.594814
texture = ExtResource("22")

[node name="LeftTargetLight" parent="." instance=ExtResource("4")]
position = Vector2(99.7473, 1277.05)
rotation = -1.31643
scale = Vector2(1.01, 1.01)
texture = ExtResource("23")

[node name="RightTargetLight" parent="." instance=ExtResource("4")]
position = Vector2(713.679, 1288.04)
rotation = 1.30676
scale = Vector2(1.01, 1.01)
texture = ExtResource("23")

[node name="X2Light" parent="." instance=ExtResource("4")]
position = Vector2(299.185, 1617.12)
rotation = -0.294188
texture = ExtResource("24")

[node name="X4Light" parent="." instance=ExtResource("4")]
position = Vector2(405.279, 1601.72)
texture = ExtResource("25")

[node name="X8Light" parent="." instance=ExtResource("4")]
position = Vector2(512.125, 1617.3)
rotation = 0.280459
texture = ExtResource("26")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 1
script = ExtResource("27")

[node name="LeftKickerLight" parent="." instance=ExtResource("4")]
position = Vector2(157.317, 1637)
rotation = 0.0385366
texture = ExtResource("28")

[node name="RightKickerLight" parent="." instance=ExtResource("4")]
position = Vector2(654.279, 1637)
rotation = -0.0440311
scale = Vector2(-1, 1)
texture = ExtResource("28")

[node name="BumperGate" parent="." instance=ExtResource("16")]
position = Vector2(477.528, 467.107)
rotation = -3.14244

[node name="Toy" type="RigidBody2D" parent="."]
process_mode = 1
z_index = 10
position = Vector2(433.266, 982.927)
gravity_scale = 0.0
script = ExtResource("29")

[node name="ToyGate1" parent="Toy" instance=ExtResource("16")]
position = Vector2(-0.875977, 105.198)
rotation = -3.1355

[node name="Sprite2D" type="Sprite2D" parent="Toy/ToyGate1"]
position = Vector2(-1.08533, 27.8723)
texture = ExtResource("30")

[node name="ToyGate2" parent="Toy" instance=ExtResource("16")]
position = Vector2(-90.8888, -53.5332)
rotation = -1.07181

[node name="Sprite2D" type="Sprite2D" parent="Toy/ToyGate2"]
position = Vector2(0.281067, 28.466)
texture = ExtResource("30")

[node name="ToyGate3" parent="Toy" instance=ExtResource("16")]
position = Vector2(90.8636, -52.4578)
rotation = 1.0348

[node name="Sprite2D" type="Sprite2D" parent="Toy/ToyGate3"]
position = Vector2(-2.78833, 27.7445)
texture = ExtResource("30")

[node name="ToySprite" type="Sprite2D" parent="Toy"]
texture = ExtResource("31")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toy"]
polygon = PackedVector2Array(-62.3261, -107.268, -77.413, -82.4681, 0.971741, -36.1912, 77.6479, -80.5264, 62.6045, -107.505, 47.0497, -107.346, 46.549, -87.0685, -46.0785, -87.0685, -47.0809, -107.155)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Toy"]
polygon = PackedVector2Array(-108.383, -26.4852, -31.0042, 15.3159, -32.4759, 106.989, -62.1208, 107.785, -69.6109, 95.4767, -52.8378, 84.9622, -100.153, 3.85052, -116.607, 13.0426, -124.484, -0.654297)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Toy"]
polygon = PackedVector2Array(31.0464, 17.6697, 109.27, -24.771, 124.57, -0.25708, 116.896, 13.1133, 99.1213, 3.60022, 53.0579, 84.2112, 69.831, 95.2263, 61.8663, 107.623, 31.4536, 107.43)

[node name="ToyRollover1" parent="Toy" instance=ExtResource("17")]
position = Vector2(0.725436, 41.8353)

[node name="ToyRollover2" parent="Toy" instance=ExtResource("17")]
position = Vector2(-36.3636, -22.2915)
rotation = 2.0944

[node name="ToyRollover3" parent="Toy" instance=ExtResource("17")]
position = Vector2(36.7086, -19.9957)
rotation = 4.18879

[node name="Rubberband1" parent="Toy" instance=ExtResource("32")]
position = Vector2(-83.6762, 50.5785)
rotation = -0.51919

[node name="Rubberband2" parent="Toy" instance=ExtResource("32")]
position = Vector2(85.0278, 48.4855)
rotation = 0.528317

[node name="Rubberband3" parent="Toy" instance=ExtResource("32")]
position = Vector2(0.664673, -97.4904)
rotation = 1.57358

[node name="Light3D" parent="Toy" instance=ExtResource("4")]
position = Vector2(0, -17)
texture = ExtResource("33")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Toy"]
stream = ExtResource("34")

[node name="Rubberband1" parent="." instance=ExtResource("32")]
position = Vector2(274.898, 643.357)
rotation = -0.530251

[node name="Rubberband2" parent="." instance=ExtResource("32")]
position = Vector2(329.424, 731.348)
rotation = -0.574914

[node name="Rubberband3" parent="." instance=ExtResource("32")]
position = Vector2(605.091, 735.321)
rotation = 0.660002

[node name="Rubberband4" parent="." instance=ExtResource("32")]
position = Vector2(660.304, 651.111)
rotation = 0.47769

[node name="Instructions" type="Sprite2D" parent="."]
visible = false
z_index = 50
position = Vector2(1344, 1008)
texture = ExtResource("35")
script = ExtResource("36")

[node name="LeftNeedle" parent="." instance=ExtResource("37")]
position = Vector2(127.618, 1978.87)

[node name="RightNeedle" parent="." instance=ExtResource("37")]
position = Vector2(681.153, 1979.19)

[node name="SkillLight1" parent="." instance=ExtResource("4")]
position = Vector2(541.562, 308.776)
rotation = 0.0971276
texture = ExtResource("38")

[node name="SkillLight2" parent="." instance=ExtResource("4")]
position = Vector2(623.935, 326.799)
rotation = 0.32827
texture = ExtResource("38")

[node name="SkillLight3" parent="." instance=ExtResource("4")]
position = Vector2(700.828, 363.96)
rotation = 0.552303
texture = ExtResource("38")

[node name="SkillRollover1" parent="." instance=ExtResource("17")]
position = Vector2(540.935, 306.602)
rotation = -3.02082

[node name="SkillRollover2" parent="." instance=ExtResource("17")]
position = Vector2(626.367, 324.057)
rotation = 3.49737

[node name="SkillRollover3" parent="." instance=ExtResource("17")]
position = Vector2(701.243, 363.376)
rotation = 3.73256

[node name="NoSkillRollover" parent="." instance=ExtResource("17")]
position = Vector2(207.867, 340.564)
rotation = -3.02082

[node name="LoopLight" parent="." instance=ExtResource("4")]
position = Vector2(375.157, 348.503)
texture = ExtResource("39")

[node name="WindowLight" parent="." instance=ExtResource("4")]
position = Vector2(89.6209, 327.201)
scale = Vector2(0.9, 0.9)
texture = ExtResource("40")
off_light = Color(1, 1, 1, 0)

[connection signal="body_entered" from="Bumper1" to="." method="_on_Bumper1_body_entered"]
[connection signal="body_entered" from="Bumper2" to="." method="_on_Bumper2_body_entered"]
[connection signal="body_entered" from="Bumper3" to="." method="_on_Bumper3_body_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="body_entered" from="DropTarget1" to="." method="_on_DropTarget1_body_entered"]
[connection signal="body_entered" from="DropTarget2" to="." method="_on_DropTarget2_body_entered"]
[connection signal="body_entered" from="DropTarget3" to="." method="_on_DropTarget3_body_entered"]
[connection signal="body_entered" from="DropTarget4" to="." method="_on_DropTarget4_body_entered"]
[connection signal="body_entered" from="DropTarget5" to="." method="_on_DropTarget5_body_entered"]
[connection signal="body_entered" from="DropTarget6" to="." method="_on_DropTarget6_body_entered"]
[connection signal="body_entered" from="LKicker" to="." method="_on_LKicker_body_entered"]
[connection signal="body_entered" from="RKicker" to="." method="_on_RKicker_body_entered"]
[connection signal="timeout" from="DMD/DMDTimer" to="DMD" method="_on_DMDTimer_timeout"]
[connection signal="rollover_entered" from="Lane1Rollover" to="." method="_on_Lane1Rollover_rollover_entered"]
[connection signal="rollover_entered" from="Lane2Rollover" to="." method="_on_Lane2Rollover_rollover_entered"]
[connection signal="rollover_entered" from="Lane3Rollover" to="." method="_on_Lane3Rollover_rollover_entered"]
[connection signal="rollover_entered" from="Lane4Rollover" to="." method="_on_Lane4Rollover_rollover_entered"]
[connection signal="rollover_entered" from="Lane5Rollover" to="." method="_on_Lane5Rollover_rollover_entered"]
[connection signal="rollover_entered" from="BallCaptureRight" to="." method="_on_BallCaptureRight_rollover_entered"]
[connection signal="timeout" from="ResetLeftTargets" to="." method="_on_ResetLeftTargets_timeout"]
[connection signal="timeout" from="ResetRightTargets" to="." method="_on_ResetRightTargets_timeout"]
[connection signal="timeout" from="BallReleaseRightTimer" to="." method="_on_BallReleaseRightTimer_timeout"]
[connection signal="timeout" from="BallEjectTimer" to="." method="_on_BallEjectTimer_timeout"]
[connection signal="timeout" from="WizardModeTimer" to="." method="_on_WizardModeTimer_timeout"]
[connection signal="timeout" from="BallSaveTimer" to="." method="_on_BallSaveTimer_timeout"]
[connection signal="timeout" from="NudgeLeftTimer" to="." method="_on_NudgeLeftTimer_timeout"]
[connection signal="timeout" from="NudgeRightTimer" to="." method="_on_NudgeRightTimer_timeout"]
[connection signal="timeout" from="NudgeUpTimer" to="." method="_on_NudgeUpTimer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="BallLostTimer" to="." method="_on_BallLostTimer_timeout"]
[connection signal="timeout" from="SkillShotTimer" to="." method="_on_SkillShotTimer_timeout"]
[connection signal="timeout" from="WindowTimer" to="." method="_on_WindowTimer_timeout"]
[connection signal="timeout" from="WizardReadyTimer" to="." method="_on_WizardReadyTimer_timeout"]
[connection signal="timeout" from="ZapTimer" to="." method="_on_ZapTimer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="rollover_entered" from="Toy/ToyRollover1" to="." method="_on_ToyRollover1_rollover_entered"]
[connection signal="rollover_entered" from="Toy/ToyRollover2" to="." method="_on_ToyRollover2_rollover_entered"]
[connection signal="rollover_entered" from="Toy/ToyRollover3" to="." method="_on_ToyRollover3_rollover_entered"]
[connection signal="rollover_entered" from="SkillRollover1" to="." method="_on_SkillRollover1_rollover_entered"]
[connection signal="rollover_entered" from="SkillRollover2" to="." method="_on_SkillRollover2_rollover_entered"]
[connection signal="rollover_entered" from="SkillRollover3" to="." method="_on_SkillRollover3_rollover_entered"]
[connection signal="rollover_entered" from="NoSkillRollover" to="." method="_on_NoSkillRollover_rollover_entered"]
